--- a/src/app/components/registro/registro.component.html
+++ b/src/app/components/registro/registro.component.html
@@ -1,13 +1,28 @@
-<form>
-    <div class="form-row align-items-center">
-        <div class="col-auto">
-            <label class="sr-only" for="inlineFormInput">Cedula</label>
-            <input type="text" class="form-control mb-2" id="inlineFormInput" placeholder="Ingrese su cedula de identidad">
-        </div>
-
-
-        <div class="col-auto">
-            <button type="submit" class="btn btn-primary mb-2">Buscar</button>
-        </div>
-    </div>
-</form>
+<div class="container text-center pb-5">
+    <img src="assets\body2.jpg" class="img-fluid" style="position: absolute; right: 0; top: 0; z-index: -100; opacity: 0.75;">
+    <div class="row pb-sm-0 my-5">
+        <div class="col-lg-8 col-md-10 mx-auto">
+            <p class="lead text-center " style="opacity: 3; font-size: 30px">
+                <b>REGISTRO DE USO DEL LABORATORIO</b>
+            </p>
+            <form>
+                <div class="form-row align-items-center">
+                    <div class="col-auto">
+                        <input type="text" class="form-control mb-2" id="inlineFormInput" placeholder="Ingrese su cedula de identidad">
+                    </div>
+                    <div class="col-auto">
+                        <button type="submit" class="btn btn-primary mb-2">Buscar</button>
+                    </div>
+                </div>
+                <div class="form-row align-items-center">
+                    <div class="col-auto">
+                        <input type="text" class="form-control mb-3" placeholder="Nombre">
+                    </div>
+                    <div class="col-auto">
+                        <input type="text" class="form-control  mb-3" placeholder="Apellido">
+                    </div>
+                    <div class="col-auto">
+                        <input type="text" class="form-control  mb-3" placeholder="Carrera">
+                    </div>
+                </div>
+            </form>
