--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,6 +1,8 @@
 <app-header>
 </app-header>
 
-<app-body></app-body>
 
+<app-registro></app-registro>
+<app-footer>
+</app-footer>
 <router-outlet></router-outlet>
