--- a/src/app/components/body/body.component.html
+++ b/src/app/components/body/body.component.html
@@ -1,16 +1,16 @@
 <div id="carouselExampleFade" class="carousel slide carousel-fade" data-ride="carousel">
     <div class="carousel-inner">
         <div class="carousel-item active">
-            <img src="/src/assets/body2.jpg" class="d-block w-100" alt="...">
+            <img src="assets/body2.jpg" class="d-block w-100" alt="...">
         </div>
         <div class="carousel-item">
-            <img src="/src/assets/body1.jpg" class="d-block w-100" alt="...">
+            <img src="assets/body1.jpg" class="d-block w-100" alt="...">
         </div>
         <div class="carousel-item">
-            <img src="/src/assets/body3.png" class="d-block w-100" alt="...">
+            <img src="assets/body3.png" class="d-block w-100" alt="...">
         </div>
         <div class="carousel-item">
-            <img src="/src/assets/body4.png" class="d-block w-100" alt="...">
+            <img src="assets/body4.png" class="d-block w-100" alt="...">
         </div>
     </div>
     <a class="carousel-control-prev" href="#carouselExampleFade" role="button" data-slide="prev">
