--- a/src/app/components/header/header.component.html
+++ b/src/app/components/header/header.component.html
@@ -7,7 +7,7 @@
         <ul class="navbar-nav ">
             <li class="nav-item active ">
                 <a class="navbar-brand " href="# ">
-                    <img src="/src/assets/istaLogo.png" width="150 " height="50 " alt=" " loading="lazy ">
+                    <img src="assets/istaLogo.png" width="150 " height="50 " alt=" " loading="lazy ">
                 </a>
             </li>
             <li class="nav-item ">
