--- a/src/app/components/registro/registro.component.html
+++ b/src/app/components/registro/registro.component.html
@@ -25,4 +25,26 @@
                         <input type="text" class="form-control  mb-3" placeholder="Carrera">
                     </div>
                 </div>
+                <div class="form-row align-items-center">
+                    <div class="col-auto">
+                        <label class="badge badge-light">Numero de laboratorio</label>
+                        <input type="number" class="form-control mb-2">
+                    </div>
+                    <div class="col-auto">
+                        <b>
+                            <label>Numero de equipo</label>
+                        </b>
+                        <input type="number" class="form-control mb-2">
+                    </div>
+                </div>
+                <div>
+                    <div class="card">
+                        <h5 class="card-header">Observaciones</h5>
+                        <div class="card-body">
+
+                            <textarea class="form-control" aria-label="With textarea"></textarea>
+
+                        </div>
+                    </div>
+                </div>
             </form>
