--- a/src/app/components/header/header.component.html
+++ b/src/app/components/header/header.component.html
@@ -11,13 +11,13 @@
                 </a>
             </li>
             <li class="nav-item ">
-                <a class="nav-link " href="# ">Inicio <span class="sr-only ">(current)</span></a>
+                <a class="nav-link " href="# " [routerLink]="['/home']">Inicio <span class="sr-only ">(current)</span></a>
             </li>
             <li class="nav-item ">
-                <a class="nav-link " href="# ">Registrar</a>
+                <a class="nav-link " href="# " [routerLink]="['/registro']">Registrar</a>
             </li>
             <li class="nav-item ">
-                <a class="nav-link " href="# ">Acerca de nosotros</a>
+                <a class="nav-link " href="# " [routerLink]="['https://www.tecazuay.edu.ec/main/index.php']">Acerca de nosotros</a>
             </li>
 
         </ul>
