--- a/src/app/components/header/header.component.html
+++ b/src/app/components/header/header.component.html
@@ -17,7 +17,10 @@
                 <a class="nav-link " href="# " [routerLink]="['/registro']">Registrar</a>
             </li>
             <li class="nav-item ">
-                <a class="nav-link " href="# " [routerLink]="['https://www.tecazuay.edu.ec/main/index.php']">Acerca de nosotros</a>
+                <a class="nav-link " href="# " [routerLink]="['/listar']">Listar</a>
+            </li>
+            <li class="nav-item ">
+                <a class="nav-link " href="https://www.tecazuay.edu.ec/main/index.php">Acerca de nosotros</a>
             </li>
 
         </ul>
