--- a/src/app/components/registro/registro.component.html
+++ b/src/app/components/registro/registro.component.html
@@ -36,6 +36,11 @@
                     </div>
                 </div>
                 <div>
+                    <div class="col-auto">
+                        <b>
+                            <label>Asignatura:</label>
+                        </b>
+                    </div>
                     <div class="dropdown">
                         <button class="btn btn-secondary dropdown-toggle" type="button" id="dropdownMenuButton" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
                          Asignaturas
