--- a/src/app/components/header/header.component.html
+++ b/src/app/components/header/header.component.html
@@ -6,7 +6,7 @@
     <div class="collapse navbar-collapse " id="navbarNav ">
         <ul class="navbar-nav ">
             <li class="nav-item active ">
-                <a class="navbar-brand " href="# ">
+                <a class="navbar-brand " href="# " [routerLink]="['/home']">
                     <img src="assets/istaLogo.png" width="150 " height="50 " alt=" " loading="lazy ">
                 </a>
             </li>
