--- a/src/app/components/listar/listar.component.html
+++ b/src/app/components/listar/listar.component.html
@@ -1,16 +1,23 @@
 <div class="container text-center pb-2">
     <img src="assets\body2.jpg" class="img-fluid" style="position: absolute; right: 0; top: 0; z-index: -100; opacity: 0.75;">
-    <div class="row pb-sm-0 my-5">
-        <div class="col-lg-8 col-md-10 mx-auto">
-            <p class="lead text-center " style="opacity: 3; font-size: 30px">
+    <form class="form-inline my-2 my-lg-0">
+        <div>
+
+        </div> <input class="form-control mr-sm-2" type="search" placeholder="Buscar" aria-label="Search">
+        <button class="btn btn-dark my-2 my-sm-0 " type="submit ">Buscar</button>
+    </form>
+    <div class="row pb-sm-0 my-5 ">
+
+        <div class="col-lg-8 col-md-10 mx-auto ">
+            <p class="lead text-center " style="opacity: 3; font-size: 30px ">
                 <b>Lista de laboratorios</b>
             </p>
-            <div class="list-group">
-                <a href="#" class="list-group-item list-group-item-action"> Cras justo odio </a>
-                <a href="#" class="list-group-item list-group-item-action">Dapibus ac facilisis in</a>
-                <a href="#" class="list-group-item list-group-item-action">Morbi leo risus</a>
-                <a href="#" class="list-group-item list-group-item-action">Porta ac consectetur ac</a>
-                <a href="#" class="list-group-item list-group-item-action " tabindex="-1" aria-disabled="true">Vestibulum at eros</a>
+            <div class="list-group ">
+                <a href="# " class="list-group-item list-group-item-action "> Cras justo odio </a>
+                <a href="# " class="list-group-item list-group-item-action ">Dapibus ac facilisis in</a>
+                <a href="# " class="list-group-item list-group-item-action ">Morbi leo risus</a>
+                <a href="# " class="list-group-item list-group-item-action ">Porta ac consectetur ac</a>
+                <a href="# " class="list-group-item list-group-item-action " tabindex="-1 " aria-disabled="true ">Vestibulum at eros</a>
             </div>
         </div>
     </div>
