--- a/src/app/components/registro/registro.component.html
+++ b/src/app/components/registro/registro.component.html
@@ -26,13 +26,13 @@
                 </div>
                 <div class="form-row align-items-center">
                     <div class="col-auto">
-                        <input type="text" class="form-control mb-3" placeholder="Nombre" value={{nombre}}>
+                        <input type="text" class="form-control mb-3" readonly=»readonly» placeholder="Nombre" value={{nombre}}>
                     </div>
                     <div class="col-auto">
-                        <input type="text" class="form-control  mb-3" placeholder="Apellido" value={{apellido}}>
+                        <input type="text" class="form-control  mb-3" readonly=»readonly» placeholder="Apellido" value={{apellido}}>
                     </div>
                     <div class="col-auto">
-                        <input type="text" class="form-control  mb-3" placeholder="Carrera" value={{nombrecarrera}}>
+                        <input type="text" class="form-control  mb-3" readonly=»readonly» placeholder="Carrera" value={{nombrecarrera}}>
                     </div>
                 </div>
                 <div class="form-row">
@@ -41,26 +41,24 @@
                             <b>
                                 <label>Nivel:</label>
                             </b>
-
-
                             <select formControlName="pais" name="pais" id="pais" class="form-control">
-                                <option value="Ecuador">Ecuador</option>
+                                
+                                <option  *ngFor="let niveles of nivel"   >
+                                    {{niveles.nivel_nombre}}
+                                </option>
                             </select>
                         </div>
 
                     </div>
                     <div class="form-group col-md-6">
                         <div class="col-auto">
-
                             <b>
-                                <label>Asignatura:</label>[';
-                                
-                                '']
+                                <label>Asignatura:</label>
                             </b>
-
-
                             <select formControlName="pais" name="pais" id="pais" class="form-control">
-                                <option value="Ecuador">Ecuador</option>
+                                <option *ngFor="let asignaturas of asignatura">
+                                    {{asignaturas.nombre_asignatura}}
+                                </option>
                             </select>
                         </div>
                     </div>
@@ -69,26 +67,39 @@
                 <div>
                     <br>
                 </div>
-                <div class="form-row align-items-center">
-                    <div class="col-auto">
-                        <b>
-                            <label>Numero de equipo</label>
-                        </b>
+                <div class="form-row">
+                    <div class="form-group col-md-6">
+                        <div class="col-auto">
+                            <b>
+                                <label>Numero laboratorio:</label>
+                            </b>
+                            <select formControlName="pais" name="pais" id="pais" class="form-control">
+                                
+                                <option   >
+                                    
+                                </option>
+                            </select>
+                        </div>
                     </div>
-                    <div class="col-auto">
-                        <input type="number" class="form-control mb-4">
+                    <div class="form-group col-md-6">
+                        <div class="col-auto">
+                            <b>
+                                <label>Numero de equipo:</label>
+                            </b>
+                            <select formControlName="pais" name="pais" id="pais" class="form-control">
+                                <option >
+                                    
+                                </option>
+                            </select>
+                        </div>
                     </div>
+
                 </div>
-                <div class="form-row align-items-center">
-                    <div class="col-auto">
-                        <b>
-                            <label>Numero de laboratorio</label>
-                        </b>
-                    </div>
-                    <div class="col-auto">
-                        <input type="number" class="form-control mb-4">
-                    </div>
+                <div>
+                    <br>
                 </div>
+
+
                 <div>
                     <div class="card">
                         <h5 class="card-header">Observaciones</h5>
@@ -101,6 +112,9 @@
                 </div>
                 <div>
                     <br>
-                    <button type="submit" class="btn btn-primary" (click)="BuscarCarrera()">Guardar</button>
+                    <button type="submit" class="btn btn-primary" (click)="BuscarLaboratorio()">Guardar</button>
                 </div>
             </form>
+        </div>
+    </div>
+</div>
