--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,6 +1,7 @@
 <app-header>
 </app-header>
-
+<app-laboratorio-card>
+</app-laboratorio-card>
 <app-footer>
 </app-footer>
 <router-outlet></router-outlet>
