--- a/src/app/components/listar/listar.component.html
+++ b/src/app/components/listar/listar.component.html
@@ -20,12 +20,12 @@
                 </thead>
                 <tbody>
                     <tr *ngFor='let bitacora of bitacoras'>
-                        <th scope="row">{{bitacora.id_estudiante}}</th>
-                        <th scope="row">*</th>
-                        <th scope="row">*</th>
+                        <th scope="row">{{bitacora.cedula}}</th>
+                        <th scope="row"></th>
                         <th scope="row">{{bitacora.fecha_bitacora}}</th>
                         <th scope="row">{{bitacora.nombre_equipo}}</th>
                         <th scope="row">{{bitacora.id_laboratorio}}</th>
+                        <th scope="row">{{bitacora.descripcion_bitacora}}</th>
                     </tr>
 
                 </tbody>
