--- a/src/app/components/registro/registro.component.html
+++ b/src/app/components/registro/registro.component.html
@@ -5,7 +5,7 @@
             <p class="lead text-center " style="opacity: 3; font-size: 30px">
                 <b>REGISTRO DE USO DEL LABORATORIO</b>
             </p>
-            <form [formGroup]="registerForm">
+            <form>
                 <div class="form-row align-items-center ">
                     <div class="col-auto ">
                         <input type="text " class="form-control mb-2 " name="cedula " id="cedula " placeholder="Ingrese su cedula de identidad " [(ngModel)]="cedula ">
@@ -41,9 +41,9 @@
                             <b>
                                 <label>Nivel:</label>
                             </b>
-                            <select formControlName="nivel " name="nivel " id="nivel " class="form-control ">
+                            <select name="nivel " id="nivel " class="form-control " (click)="SelectNivel()">
                                 
-                                <option  *ngFor="let niveles of nivel "   >
+                                <option  *ngFor="let niveles of nivel "  value={{niveles.nivel_nombre}}>
                                     {{niveles.nivel_nombre}}
                                 </option>
                             </select>
@@ -55,7 +55,7 @@
                             <b>
                                 <label>Asignatura:</label>
                             </b>
-                            <select formControlName="asignatura " name="asignatura " id="asignatura " class="form-control ">
+                            <select name="asignatura " id="asignatura " class="form-control ">
                                 <option *ngFor="let asignaturas of asignatura ">
                                     {{asignaturas.nombre_asignatura}}
                                 </option>
@@ -73,7 +73,7 @@
                             <b>
                                 <label>Numero laboratorio:</label>
                             </b>
-                            <select formControlName="laboratorio " name="laboratorio " id="laboratorio " class="form-control ">
+                            <select name="laboratorio " id="laboratorio " class="form-control ">
                                 
                                 <option  *ngFor=' let laboratorios of laboratorio' >
                                     {{laboratorios.nombre_laboratorio}}
@@ -86,9 +86,9 @@
                             <b>
                                 <label>Numero de equipo:</label>
                             </b>
-                            <select formControlName="maquina " name="maquina " id="maquina " class="form-control ">
-                                <option *ngFor='let equipos of equipo' >
-                                    {{equipos.codigo_equipo}}
+                            <select name="nombreequipo " id="nombreequipo" class="form-control " [(ngModel)]="nombreequipo">
+                                <option *ngFor='let equipo of equipos' >
+                                    {{equipo.codigo_equipo}}
                                 </option>
                             </select>
                         </div>
@@ -105,14 +105,14 @@
                         <h5 class="card-header ">Observaciones</h5>
                         <div class="card-body ">
 
-                            <textarea class="form-control " aria-label="With textarea "></textarea>
+                            <textarea class="form-control " aria-label="With textarea " name="descripcionbitacora" id="descripcionbitacora " [(ngModel)]="descripcionbitacora"></textarea>
 
                         </div>
                     </div>
                 </div>
                 <div>
                     <br>
-                    <button type="submit " class="btn btn-primary " (click)="BuscarLaboratorio() ">Guardar</button>
+                    <button type="submit " class="btn btn-primary " (click)="GuardarBitacora() ">Guardar</button>
                 </div>
             </form>
         </div>
