--- a/src/app/components/listaequipos/listaequipos.component.html
+++ b/src/app/components/listaequipos/listaequipos.component.html
@@ -11,8 +11,8 @@
             </thead>
             <tbody>
                 <tr *ngFor='let equipo of listaequipos'>
-                    <th scope="row">{{equipo.nombre_equipo}}</th>
-                    <th scope="row">{{equipo.codigo_equipo}}</th>
+                    <th scope="row">{{equipo.nombreEquipo}}</th>
+                    <th scope="row">{{equipo.codigoEquipo}}</th>
                 </tr>
             </tbody>
         </table>
