--- a/src/app/components/body/body.component.html
+++ b/src/app/components/body/body.component.html
@@ -1,37 +1,91 @@
 <main class="container mt-5">
-
-    <div id="carouselExampleFade" class="carousel slide carousel-fade" data-ride="carousel">
-        <div class="carousel-inner">
-            <div class="carousel-item active">
-                <img src="assets/body2.jpg" class="d-block w-100" alt="...">
-            </div>
-            <div class="carousel-item">
-                <img src="assets/body1.jpg" class="d-block w-100" alt="...">
-            </div>
-            <div class="carousel-item">
-                <img src="assets/body3.png" class="d-block w-100" alt="...">
-            </div>
-            <div class="carousel-item">
-                <img src="assets/body4.png" class="d-block w-100" alt="...">
-            </div>
-        </div>
-        <a class="carousel-control-prev" href="#carouselExampleFade" role="button" data-slide="prev">
-            <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-            <span class="sr-only">Previous</span>
-        </a>
-        <a class="carousel-control-next" href="#carouselExampleFade" role="button" data-slide="next">
-            <span class="carousel-control-next-icon" aria-hidden="true"></span>
-            <span class="sr-only">Next</span>
-        </a>
-    </div>
-    <div>
-        <br> </div>
     <div class="row">
         <div class="col-md-6">
+            <div id="carouselExampleFade" class="carousel slide carousel-fade" data-ride="carousel">
+                <div class="carousel-inner">
+                    <div class="carousel-item active">
+                        <img src="assets/body2.jpg" class="d-block w-100" alt="...">
+                    </div>
+                    <div class="carousel-item">
+                        <img src="assets/body1.jpg" class="d-block w-100" alt="...">
+                    </div>
+                    <div class="carousel-item">
+                        <img src="assets/body3.png" class="d-block w-100" alt="...">
+                    </div>
+                    <div class="carousel-item">
+                        <img src="assets/body4.png" class="d-block w-100" alt="...">
+                    </div>
+                </div>
+                <a class="carousel-control-prev" href="#carouselExampleFade" role="button" data-slide="prev">
+                    <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                    <span class="sr-only">Previous</span>
+                </a>
+                <a class="carousel-control-next" href="#carouselExampleFade" role="button" data-slide="next">
+                    <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                    <span class="sr-only">Next</span>
+                </a>
+            </div>
+
+
+        </div>
+        <div>
+
             <button class="btn btn-danger" (click)='signInWithGoogle()'>
-                <i class="fa fa-google"></i>
-                Iniciar sesion con GOOGLE
-            </button>
+                Iniciar sesion con Google
+                </button>
+            <div>
+                <br>
+            </div>
+            <button class="btn btn-dark" (click)='signOut()'>
+                <i class="fa fa-google"></i> Cerrar sesion
+                </button>
+            <div>
+                <br> </div>
+            <div *ngIf="user">
+                <img src="{{ user.photoUrl }}">
+                <div>
+                    <h4>{{ user.name }}</h4>
+                    <p>{{ user.email }}</p>
+                </div>
+            </div>
         </div>
     </div>
 </main>
+<div>
+    <br>
+</div>
+<div class="row row-cols-1 row-cols-md-3">
+    <div class="col-sm-6">
+        <div class="card">
+            <div class="card-body">
+                <h5 class="card-title" style="color:darkcyan;">Mision</h5>
+                <p class="card-text">
+                    El INSTITUTO SUPERIOR TECNOLÓGICO DEL AZUAY es una institución de Educación Superior a nivel técnico y tecnológico, dedicada a formar profesionales comprometidos éticamente con la sociedad, desde una preparación basada en entornos de aprendizaje académicos
+                    y experienciales que contribuyan al desarrollo de la matriz productiva de la región y sustentada en principios de igualdad, inclusión, solidaridad, interculturalidad y comprensión de la diversidad.
+                </p>
+
+            </div>
+        </div>
+    </div>
+    <div class="col-sm-6">
+        <div class="card">
+            <div class="card-body">
+                <b>
+                    <h5 class="card-title" style="color:darkcyan;" >Vision</h5>
+                </b>
+
+                <p class="card-text">Ser una institución de calidad, solidaria, inclusiva, intercultural y diversa, reconocida por su excelencia académica y sus aportes a la sociedad en el área de la investigación, innovación tecnológica y vinculación con la colectividad,
+                    promoviendo el desarrollo integral de la persona y el entorno, en busca de una sociedad justa y equitativa.</p>
+
+            </div>
+        </div>
+    </div>
+    <div class="col-sm-6">
+        <div class="card">
+            <div class="card-body">
+                <h5 class="card-title" style="color:darkcyan;" fa fa-align-center>Contactenos</h5>
+                <p class="card-text ">Dirección: Octavio Chacón Moscoso 1-98 y Primera Transversal (Parque industrial) Teléfono: 07 2809 551 - 0995363076 Correo Electrónico:info@tecazuay.edu.ec</p>
+            </div>
+        </div>
+    </div>
+</div>
