--- a/src/app/components/estudiante-card/estudiante-card.component.html
+++ b/src/app/components/estudiante-card/estudiante-card.component.html
@@ -4,7 +4,7 @@
         <div class="card-body">
             <h5 class="card-title">{{estudiante.nombre}} {{estudiante.apellido}}</h5>
             <p class="card-text">{{estudiante.cedula}}</p>
-            <p class="card-text">{{estudiante.correo_institucional}}</p>
+            <p class="card-text">{{estudiante.correoInstitucional}}</p>
             <button type="button" class="btn btn-outline-info btn-block"> Ver más</button>
         </div>
     </div>
